--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700');
+
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
+
 .App {
   text-align: center;
 }
@@ -25,4 +32,27 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+
+
+
+
+.preview-point {
+  margin-bottom: 10px;
+  padding: 20px;
+  color: #000;
+}
+
+
+
+
+.app-sidebar {
+  
+}
+.app-sidebar h2 {
+  margin: 0;
+}
+.app-sidebar__section {
+  margin-bottom: 30px;
 }
